Added More API routes
